[package]
name = "rustuino"
authors = ["SebastianBraun01 <SebastianBraun-Ost@protonmail.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
heapless = "0.7.7"
libm = "0.2.1"
paste = "1.0.5"

[dependencies.stm32f4]
version = "0.14.0"
features = ["stm32f446", "rt"]

[lib]
name = "rustuino"
test = false
bench = false
