[package]
name = "rustuino"
authors = ["SebastianBraun01 <SebastianBraun-Ost@protonmail.com>", "Aaron Erhardt"]
edition = "2021"
version = "0.1.0"
description = "A library to for programming the stm32f446re"
license-file = "LICENSE"
repository = "https://github.com/SebastianBraun01/rustuino"
readme = "README.md"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
heapless = "0.7.7"
libm = "0.2.1"
paste = "1.0.5"

[dependencies.stm32f4]
version = "0.14.0"
features = ["stm32f446", "rt"]

[lib]
name = "rustuino"
test = false
bench = false
